ES systems through DC

--- a/emulationstation/.emulationstation/es_systems.cfg
+++ b/emulationstation/.emulationstation/es_systems.cfg
@@ -45,17 +45,106 @@
     <system>
         <name>ATARIST</name>
         <fullname>Atari ST</fullname>
-        <path>/mnt/SDCARD/Roms/ATARIST</path>
+        <path>/mnt/SDCARD/Roms/ATARIST/</path>
         <extension>.st .msa .stx .dim .ipf .zip .7z</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>atarist</platform>
         <theme>atarist</theme>
     </system>
 
+    <system>
+        <name>CHAI</name>
+        <fullname>ChaiLove</fullname>
+        <path>/mnt/SDCARD/Roms/CHAI/</path>
+        <extension>.chailove</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>chailove</platform>
+        <theme>chailove</theme>
+    </system>
+
+    <system>
+        <name>COLECO</name>
+        <fullname>ColecoVision</fullname>
+        <path>/mnt/SDCARD/Roms/COLECO/</path>
+        <extension>.zip .7z .rom .ri .mx1 .mx2 .col .dsk .cas .sg .sc .m3u</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>colecovision</platform>
+        <theme>colecovision</theme>
+    </system>
+
+    <system>
+        <name>COMMODORE</name>
+        <fullname>Commodore 64</fullname>
+        <path>/mnt/SDCARD/Roms/COMMODORE/</path>
+        <extension>.d64 .zip .7z .t64 .crt .prg .nib .tap</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>c64</platform>
+        <theme>c64</theme>
+    </system>
+
+    <system>
+        <name>CPC</name>
+        <fullname>Amstrad CPC</fullname>
+        <path>/mnt/SDCARD/Roms/CPC/</path>
+        <extension>.zip .7z .sna .dsk .kcr .bin</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>amstradcpc</platform>
+        <theme>amstradcpc</theme>
+    </system>
+
+    <system>
+        <name>CPS1</name>
+        <fullname>Capcom Play System 1</fullname>
+        <path>/mnt/SDCARD/Roms/CPS1/</path>
+        <extension>.zip .7z .cue</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>cps1</platform>
+        <theme>cps1</theme>
+    </system>
+
+    <system>
+        <name>CPS2</name>
+        <fullname>Capcom Play System 2</fullname>
+        <path>/mnt/SDCARD/Roms/CPS2/</path>
+        <extension>.zip .7z .cue</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>cps2</platform>
+        <theme>cps2</theme>
+    </system>
+
+    <system>
+        <name>CPS3</name>
+        <fullname>Capcom Play System 3</fullname>
+        <path>/mnt/SDCARD/Roms/CPS3/</path>
+        <extension>.zip .7z .cue</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>cps3</platform>
+        <theme>cps3</theme>
+    </system>
+
+    <system>
+        <name>DC</name>
+        <fullname>Sega Dreamcast</fullname>
+        <path>/mnt/SDCARD/Roms/DC/</path>
+        <extension>.chd .cdi .elf .bin .cue .gdi .lst .zip .dat .7z .m3u .iso</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>dreamcast</platform>
+        <theme>dreamcast</theme>
+    </system>
 
 
 
 
+
+    <system>
+        <name>FBNEO</name>
+        <fullname>Final Burn Neo</fullname>
+        <path>/mnt/SDCARD/Roms/FBNEO/</path>
+        <extension>.zip .ZIP</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>arcade</platform>
+        <theme>fba</theme>
+    </system>
 
     <system>
         <name>FC</name>
@@ -68,13 +157,73 @@
     </system>
 
     <system>
+        <name>GB</name>
+        <fullname>Game Boy</fullname>
+        <path>/mnt/SDCARD/Roms/GB/</path>
+        <extension>.zip .ZIP .gb</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>gb</platform>
+        <theme>gb</theme>
+    </system>
+
+    <system>
+        <name>GBA</name>
+        <fullname>Nintendo Game Boy Advance</fullname>
+        <path>/mnt/SDCARD/Roms/GBA/</path>
+        <extension>.zip .ZIP .gba .GBA .agb .AGB .gbz .GBZ</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>gba</platform>
+        <theme>gba</theme>
+    </system>
+
+    <system>
+        <name>GBC</name>
+        <fullname>Nintendo Game Boy Color</fullname>
+        <path>/mnt/SDCARD/Roms/GBC/</path>
+        <extension>.zip .ZIP .gbc .GBC</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>gbc</platform>
+        <theme>gbc</theme>
+    </system>
+
+    <system>
+        <name>GG</name>
+        <fullname>Sega Game Gear</fullname>
+        <path>/mnt/SDCARD/Roms/GG/</path>
+        <extension>.zip .ZIP .gg .sg .68k .sgd .bin .BIN</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>gamegear</platform>
+        <theme>gamegear</theme>
+    </system>
+
+    <system>
         <name>MD</name>
-        <fullname>Mega Drive</fullname>
+        <fullname>Sega Genesis</fullname>
         <path>/mnt/SDCARD/Roms/MD/</path>
         <extension>.zip .ZIP .mdx .md .smd .gen .bin .cue .iso .sms .bms .gg .sg .68k .sgd .chd .m3u</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>megadrive</platform>
         <theme>megadrive</theme>
+    </system>
+
+    <system>
+        <name>MS</name>
+        <fullname>Sega Master System</fullname>
+        <path>/mnt/SDCARD/Roms/MS/</path>
+        <extension>.zip .ZIP .sms .bms .gg .sg .68k .sgd .bin .BIN</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>mastersystem</platform>
+        <theme>mastersystem</theme>
+    </system>
+
+    <system>
+        <name>SEVENTYEIGHTHUNDRED</name>
+        <fullname>Atari 7800</fullname>
+        <path>/mnt/SDCARD/Roms/SEVENTYEIGHTHUNDRED/</path>
+        <extension>.zip .ZIP .a78 .A78 .bin .BIN</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>atari7800</platform>
+        <theme>atari7800</theme>
     </system>
 
     <system>
@@ -88,50 +237,8 @@
     </system>
 
     <system>
-        <name>gamegear</name>
-        <fullname>Game Gear</fullname>
-        <path>/mnt/SDCARD/Roms/GG/</path>
-        <extension>.zip .ZIP .gg .sg .68k .sgd .bin .BIN</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>gamegear</platform>
-        <theme>gamegear</theme>
-    </system>
-
-    <system>
-        <name>mastersystem</name>
-        <fullname>Master System</fullname>
-        <path>/mnt/SDCARD/Roms/MS/</path>
-        <extension>.zip .ZIP .sms .bms .gg .sg .68k .sgd .bin .BIN</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>mastersystem</platform>
-        <theme>mastersystem</theme>
-    </system>
-
-
-
-    <system>
-        <name>atari7800</name>
-        <fullname>Atari7800</fullname>
-        <path>/mnt/SDCARD/Roms/atari7800/</path>
-        <extension>.zip .ZIP .a78 .A78 .bin .BIN</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>atari7800</platform>
-        <theme>atari7800</theme>
-    </system>
-
-    <system>
-        <name>DC</name>
-        <fullname>Dreamcast</fullname>
-        <path>/mnt/SDCARD/Roms/DC/</path>
-        <extension>.chd .cdi .elf .bin .cue .gdi .lst .zip .dat .7z .m3u</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>dreamcast</platform>
-        <theme>dreamcast</theme>
-    </system>
-
-    <system>
         <name>N64</name>
-        <fullname>N64</fullname>
+        <fullname>Nintendo 64</fullname>
         <path>/mnt/SDCARD/Roms/N64/</path>
         <extension>.zip .ZIP .7z .n64 .c64 .z64</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
@@ -140,58 +247,8 @@
     </system>
 
     <system>
-        <name>fba</name>
-        <fullname>FinalBurn Alpha</fullname>
-        <path>/mnt/SDCARD/Roms/ARCADE/</path>
-        <extension>.zip .ZIP</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>arcade</platform>
-        <theme>fba</theme>
-    </system>
-
-    <system>
-        <name>fbneo</name>
-        <fullname>FinalBurn Neo</fullname>
-        <path>/mnt/SDCARD/Roms/fbahack/</path>
-        <extension>.zip .ZIP</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>arcade</platform>
-        <theme>fba</theme>
-    </system>
-
-    <system>
-        <name>gba</name>
-        <fullname>GameBoy Advance</fullname>
-        <path>/mnt/SDCARD/Roms/GBA/</path>
-        <extension>.zip .ZIP .gba .GBA .agb .AGB .gbz .GBZ</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>gba</platform>
-        <theme>gba</theme>
-    </system>
-
-    <system>
-        <name>gbc</name>
-        <fullname>GameBoy Color</fullname>
-        <path>/mnt/SDCARD/Roms/GBC/</path>
-        <extension>.zip .ZIP .gbc .GBC</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>gbc</platform>
-        <theme>gbc</theme>
-    </system>
-
-    <system>
-        <name>gb</name>
-        <fullname>GameBoy</fullname>
-        <path>/mnt/SDCARD/Roms/GB/</path>
-        <extension>.zip .ZIP .gb</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>gb</platform>
-        <theme>gb</theme>
-    </system>
-
-    <system>
-        <name>mame</name>
-        <fullname>MAME2003PLUS</fullname>
+        <name>MAME2003PLUS</name>
+        <fullname>MAME 2003 Plus</fullname>
         <path>/mnt/SDCARD/Roms/MAME2003PLUS/</path>
         <extension>.zip .ZIP</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
@@ -199,9 +256,8 @@
         <theme>mame</theme>
     </system>
 
-
     <system>
-        <name>neogeo</name>
+        <name>NEOGEO</name>
         <fullname>NEOGEO</fullname>
         <path>/mnt/SDCARD/Roms/NEOGEO/</path>
         <extension>.zip .ZIP</extension>
@@ -211,8 +267,8 @@
     </system>
 
     <system>
-        <name>ngp</name>
-        <fullname>NGP</fullname>
+        <name>NGP</name>
+        <fullname>NEOGEO Pocket</fullname>
         <path>/mnt/SDCARD/Roms/NGP/</path>
         <extension>.zip .ZIP .ngc .NGC .ngp .NGP</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
@@ -221,8 +277,8 @@
     </system>
 
     <system>
-        <name>pce</name>
-        <fullname>PCEngine</fullname>
+        <name>PCE</name>
+        <fullname>TurboGrafx-16</fullname>
         <path>/mnt/SDCARD/Roms/PCE/</path>
         <extension>.zip .ZIP .pce .PCE .cue .CUE</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
@@ -230,10 +286,9 @@
         <theme>pcengine</theme>
     </system>
 
-
     <system>
-        <name>ppsspp</name>
-        <fullname>PPSSPP</fullname>
+        <name>PSP</name>
+        <fullname>PSP</fullname>
         <path>/mnt/SDCARD/Roms/PSP/</path>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>psp</platform>
@@ -241,13 +296,13 @@
     </system>
 
     <system>
-        <name>wsc</name>
-        <fullname>WonderSwan</fullname>
+        <name>WSC</name>
+        <fullname>Wonder Swan Color</fullname>
         <path>/mnt/SDCARD/Roms/WSC/</path>
         <extension>.zip .ZIP .wsc .WSC .ws .WS</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>wonderswan</platform>
-        <theme>wonderswan</theme>
+        <platform>wonderswancolor</platform>
+        <theme>wonderswancolor</theme>
     </system>    
 
 </systemList>
