ES systems through GW

--- a/emulationstation/.emulationstation/es_systems.cfg
+++ b/emulationstation/.emulationstation/es_systems.cfg
@@ -1,7 +1,6 @@
 
 <systemList>
 
-
     <system>
         <name>AMIGA</name>
         <fullname>Commodore Amiga</fullname>
@@ -126,21 +125,77 @@
         <name>DC</name>
         <fullname>Sega Dreamcast</fullname>
         <path>/mnt/SDCARD/Roms/DC/</path>
-        <extension>.chd .cdi .elf .bin .cue .gdi .lst .zip .dat .7z .m3u .iso</extension>
+        <extension>.chd .cdi .cue .gdi .m3u .iso</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>dreamcast</platform>
         <theme>dreamcast</theme>
     </system>
 
+    <system>
+        <name>DOOM</name>
+        <fullname>Doom</fullname>
+        <path>/mnt/SDCARD/Roms/DOOM/</path>
+        <extension>.zip .wad .exe</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>doom</platform>
+        <theme>doom</theme>
+    </system>
 
+    <system>
+        <name>DOS</name>
+        <fullname>Microsoft DOS</fullname>
+        <path>/mnt/SDCARD/Roms/DOS/</path>
+        <extension>.zip .dosz .exe .com .bat .iso .ins .img .ima .vhd .jrc .tc .m3u .m3u8 .conf</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>dos</platform>
+        <theme>dos</theme>
+    </system>
 
+    <system>
+        <name>EASYRPG</name>
+        <fullname>Easy RPG</fullname>
+        <path>/mnt/SDCARD/Roms/EASYRPG/</path>
+        <extension>.zip .ldb .easyrpg</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>easyrpg</platform>
+        <theme>easyrpg</theme>
+    </system>
 
+    <system>
+        <name>EIGHTHUNDRED</name>
+        <fullname>Atari 800</fullname>
+        <path>/mnt/SDCARD/Roms/ATARI800/</path>
+        <extension>.zip .7z .xfd .atr .cdm .cas .bin .a52 .atx .car .com .xex</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>atari800</platform>
+        <theme>atari800</theme>
+    </system>
+
+    <system>
+        <name>FAIRCHILD</name>
+        <fullname>Fairchild Channel F</fullname>
+        <path>/mnt/SDCARD/Roms/FAIRCHILD/</path>
+        <extension>.zip .bin .rom .chf</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>channelf</platform>
+        <theme>channelf</theme>
+    </system>
+
+    <system>
+        <name>FAKE08</name>
+        <fullname>Fake-08</fullname>
+        <path>/mnt/SDCARD/Roms/FAKE08</path>
+        <extension>.p8 .p8.png</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>pico8</platform>
+        <theme>pico8</theme>
+    </system>
 
     <system>
         <name>FBNEO</name>
         <fullname>Final Burn Neo</fullname>
         <path>/mnt/SDCARD/Roms/FBNEO/</path>
-        <extension>.zip .ZIP</extension>
+        <extension>.zip</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>arcade</platform>
         <theme>fba</theme>
@@ -150,17 +205,37 @@
         <name>FC</name>
         <fullname>Nintendo Entertainment System</fullname>
         <path>/mnt/SDCARD/Roms/FC/</path>
-        <extension>.nes .NES .zip</extension>
+        <extension>.zip .7z .nes .fds .unif .unf</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>nes</platform>
         <theme>nes</theme>
     </system>
 
     <system>
+        <name>FDS</name>
+        <fullname>Famicom Disc System</fullname>
+        <path>/mnt/SDCARD/Roms/FDS/</path>
+        <extension>.zip .7z .fds .nes .unif .unf</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>fds</platform>
+        <theme>fds</theme>
+    </system>
+
+    <system>
+        <name>FIFTYTWOHUNDRED</name>
+        <fullname>Atari 5200</fullname>
+        <path>/mnt/SDCARD/Roms/FIFTYTWOHUNDRED</path>
+        <extension>.a52 .zip .7z .atr .bin</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>atari5200</platform>
+        <theme>atari5200</theme>
+    </system>
+
+    <system>
         <name>GB</name>
-        <fullname>Game Boy</fullname>
+        <fullname>Nintendo Game Boy</fullname>
         <path>/mnt/SDCARD/Roms/GB/</path>
-        <extension>.zip .ZIP .gb</extension>
+        <extension>.gb .gbc .zip .7z .bin .dmg</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>gb</platform>
         <theme>gb</theme>
@@ -170,7 +245,7 @@
         <name>GBA</name>
         <fullname>Nintendo Game Boy Advance</fullname>
         <path>/mnt/SDCARD/Roms/GBA/</path>
-        <extension>.zip .ZIP .gba .GBA .agb .AGB .gbz .GBZ</extension>
+        <extension>.gba .zip .7z .bin</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>gba</platform>
         <theme>gba</theme>
@@ -180,7 +255,7 @@
         <name>GBC</name>
         <fullname>Nintendo Game Boy Color</fullname>
         <path>/mnt/SDCARD/Roms/GBC/</path>
-        <extension>.zip .ZIP .gbc .GBC</extension>
+        <extension>.gb .gbc .zip .7z .bin .dmg</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>gbc</platform>
         <theme>gbc</theme>
@@ -190,11 +265,23 @@
         <name>GG</name>
         <fullname>Sega Game Gear</fullname>
         <path>/mnt/SDCARD/Roms/GG/</path>
-        <extension>.zip .ZIP .gg .sg .68k .sgd .bin .BIN</extension>
+        <extension>.bin .gg .zip .7z</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>gamegear</platform>
         <theme>gamegear</theme>
     </system>
+
+    <system>
+        <name>GW</name>
+        <fullname>Nintendo Game & Watch</fullname>
+        <path>/mnt/SDCARD/Roms/GW/</path>
+        <extension>.mgw .zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>gameandwatch</platform>
+        <theme>gameandwatch</theme>
+    </system>
+
+
 
     <system>
         <name>MD</name>
