ES systems through MSX

--- a/emulationstation/.emulationstation/es_systems.cfg
+++ b/emulationstation/.emulationstation/es_systems.cfg
@@ -1,6 +1,7 @@
 
 <systemList>
 
+
     <system>
         <name>AMIGA</name>
         <fullname>Commodore Amiga</fullname>
@@ -281,27 +282,107 @@
         <theme>gameandwatch</theme>
     </system>
 
+    <system>
+        <name>INTELLIVISION</name>
+        <fullname>Mattel Intellivision</fullname>
+        <path>/mnt/SDCARD/Roms/INTELLIVISION</path>
+        <extension>.zip .7z .bin .int</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>intellivision</platform>
+        <theme>intellivision</theme>
+    </system>
 
+    <system>
+        <name>LYNX</name>
+        <fullname>Atari Lynx</fullname>
+        <path>/mnt/SDCARD/Roms/LYNX/</path>
+        <extension>.lnx .zip</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>atarilynx</platform>
+        <theme>atarilynx</theme>
+    </system>
+
+    <system>
+        <name>MAME2003PLUS</name>
+        <fullname>MAME 2003 Plus</fullname>
+        <path>/mnt/SDCARD/Roms/MAME2003PLUS/</path>
+        <extension>.zip</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>mame</platform>
+        <theme>mame</theme>
+    </system>
 
     <system>
         <name>MD</name>
         <fullname>Sega Genesis</fullname>
         <path>/mnt/SDCARD/Roms/MD/</path>
-        <extension>.zip .ZIP .mdx .md .smd .gen .bin .cue .iso .sms .bms .gg .sg .68k .sgd .chd .m3u</extension>
+        <extension>.zip .7z .gen .smd .md .32x .bin .iso .sms .68k .chd</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>megadrive</platform>
         <theme>megadrive</theme>
     </system>
 
     <system>
+        <name>MEDIA</name>
+        <fullname>Media</fullname>
+        <path>/mnt/SDCARD/Roms/MEDIA/</path>
+        <extension>.mp4 .mkv .avi .mpg .mpeg .wmv .asf .rm .rmvb .m4v .ts .mp3 .wma .jpg .png .bmp</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>media</platform>
+        <theme>media</theme>
+    </system>
+
+    <system>
+        <name>MEGADUCK</name>
+        <fullname>Mega Duck</fullname>
+        <path>/mnt/SDCARD/Roms/MEGADUCK/</path>
+        <extension>.bin .zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>megaduck</platform>
+        <theme>megaduck</theme>
+    </system>
+
+    <system>
         <name>MS</name>
         <fullname>Sega Master System</fullname>
         <path>/mnt/SDCARD/Roms/MS/</path>
-        <extension>.zip .ZIP .sms .bms .gg .sg .68k .sgd .bin .BIN</extension>
+        <extension>.gen .smd .md .32x .bin .iso .sms .68k .chd .zip .7z</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>mastersystem</platform>
         <theme>mastersystem</theme>
     </system>
+
+    <system>
+        <name>MSU1</name>
+        <fullname>Super Nintendo MSU-1</fullname>
+        <path>/mnt/SDCARD/Roms/MSU1/</path>
+        <extension>.sfc .smc .zip .7z .fig .bs .st</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>snes</platform>
+        <theme>snes</theme>
+    </system>
+
+    <system>
+        <name>MSUMD</name>
+        <fullname>Sega Genesis MSU-MD</fullname>
+        <path>/mnt/SDCARD/Roms/MSUMD/</path>
+        <extension>.zip .7z .gen .smd .md .32x .bin .iso .sms .68k .chd</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>megadrive</platform>
+        <theme>megadrive</theme>
+    </system>
+
+    <system>
+        <name>MSX</name>
+        <fullname>Microsoft MSX</fullname>
+        <path>/mnt/SDCARD/Roms/MSX/</path>
+        <extension>.zip .7z .rom .mx1 .mx2 .dsk .cas .m3u</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>msx</platform>
+        <theme>msx</theme>
+    </system>
+
+
 
     <system>
         <name>SEVENTYEIGHTHUNDRED</name>
@@ -333,15 +414,7 @@
         <theme>n64</theme>
     </system>
 
-    <system>
-        <name>MAME2003PLUS</name>
-        <fullname>MAME 2003 Plus</fullname>
-        <path>/mnt/SDCARD/Roms/MAME2003PLUS/</path>
-        <extension>.zip .ZIP</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>mame</platform>
-        <theme>mame</theme>
-    </system>
+
 
     <system>
         <name>NEOGEO</name>
