ES systems through PSP

--- a/emulationstation/.emulationstation/es_systems.cfg
+++ b/emulationstation/.emulationstation/es_systems.cfg
@@ -1,7 +1,6 @@
 
 <systemList>
 
-
     <system>
         <name>AMIGA</name>
         <fullname>Commodore Amiga</fullname>
@@ -382,6 +381,157 @@
         <theme>msx</theme>
     </system>
 
+    <system>
+        <name>N64</name>
+        <fullname>Nintendo 64</fullname>
+        <path>/mnt/SDCARD/Roms/N64/</path>
+        <extension>.zip .7z .n64 .z64 .v64</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>n64</platform>
+        <theme>n64</theme>
+    </system>
+
+    <system>
+        <name>NDS</name>
+        <fullname>Nintendo DS</fullname>
+        <path>/mnt/SDCARD/Roms/NDS/</path>
+        <extension>.nds .zip .7z .rar</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>nds</platform>
+        <theme>nds</theme>
+    </system>
+
+    <system>
+        <name>NEOCD</name>
+        <fullname>NEOGEO CD</fullname>
+        <path>/mnt/SDCARD/Roms/NEOCD</path>
+        <extension>.cue .chd .m3u</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>neocd</platform>
+        <theme>neocd</theme>
+    </system>
+
+    <system>
+        <name>NEOGEO</name>
+        <fullname>NEOGEO</fullname>
+        <path>/mnt/SDCARD/Roms/NEOGEO/</path>
+        <extension>.zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>neogeo</platform>
+        <theme>neogeo</theme>
+    </system>
+
+    <system>
+        <name>NGP</name>
+        <fullname>NEOGEO Pocket</fullname>
+        <path>/mnt/SDCARD/Roms/NGP/</path>
+        <extension>.ngp .ngc .zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>ngp</platform>
+        <theme>ngp</theme>
+    </system>
+
+    <system>
+        <name>NGPC</name>
+        <fullname>NEOGEO Pocket Color</fullname>
+        <path>/mnt/SDCARD/Roms/NGPC/</path>
+        <extension>.ngp .ngc .zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>ngpc</platform>
+        <theme>ngpc</theme>
+    </system>
+
+    <system>
+        <name>ODYSSEY</name>
+        <fullname>Magnavox Odyssey</fullname>
+        <path>/mnt/SDCARD/Roms/ODYSSEY/</path>
+        <extension>.bin .zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>odyssey</platform>
+        <theme>odyssey</theme>
+    </system>
+
+    <system>
+        <name>OPENBOR</name>
+        <fullname>Open Beats of Rage</fullname>
+        <path>/mnt/SDCARD/Roms/OPENBOR/</path>
+        <extension>.pak</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>openbor</platform>
+        <theme>openbor</theme>
+    </system>
+
+    <system>
+        <name>PCE</name>
+        <fullname>TurboGrafx-16</fullname>
+        <path>/mnt/SDCARD/Roms/PCE/</path>
+        <extension>.pce .zip .7z .ccd .iso .img .chd .cue</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>pcengine</platform>
+        <theme>pcengine</theme>
+    </system>
+
+    <system>
+        <name>PCECD</name>
+        <fullname>TurboGrafx-CD</fullname>
+        <path>/mnt/SDCARD/Roms/PCECD/</path>
+        <extension>.iso .img .chd .pce .ccd .cue .zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>pcenginecd</platform>
+        <theme>pcenginecd</theme>
+    </system>
+
+    <system>
+        <name>PICO8</name>
+        <fullname>Pico-8</fullname>
+        <path>/mnt/SDCARD/Roms/PICO8/</path>
+        <extension>.p8 .png .splore</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>pico8</platform>
+        <theme>pico8</theme>
+    </system>
+
+    <system>
+        <name>POKE</name>
+        <fullname>Nintendo Pokemon Mini</fullname>
+        <path>/mnt/SDCARD/Roms/POKE/</path>
+        <extension>.min .zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>pokemini</platform>
+        <theme>pokemini</theme>
+    </system>
+
+    <system>
+        <name>PORTS</name>
+        <fullname>Native Games (Ports)</fullname>
+        <path>/mnt/SDCARD/Roms/PORTS/</path>
+        <extension>.sh</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>ports</platform>
+        <theme>ports</theme>
+    </system>
+
+    <system>
+        <name>PS</name>
+        <fullname>Sony PlayStation</fullname>
+        <path>/mnt/SDCARD/Roms/PS/</path>
+        <extension>.m3u .chd .cue .img .mdf .pbp .PBP .toc .cbn</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>psx</platform>
+        <theme>psx</theme>
+    </system>
+
+    <system>
+        <name>PSP</name>
+        <fullname>Sony PlayStation Portable</fullname>
+        <path>/mnt/SDCARD/Roms/PSP/</path>
+        <extension>.iso .cso .chd</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>psp</platform>
+        <theme>psp</theme>
+    </system>
+
+
 
 
     <system>
@@ -402,57 +552,6 @@
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>sfc</platform>
         <theme>sfc</theme>
-    </system>
-
-    <system>
-        <name>N64</name>
-        <fullname>Nintendo 64</fullname>
-        <path>/mnt/SDCARD/Roms/N64/</path>
-        <extension>.zip .ZIP .7z .n64 .c64 .z64</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>n64</platform>
-        <theme>n64</theme>
-    </system>
-
-
-
-    <system>
-        <name>NEOGEO</name>
-        <fullname>NEOGEO</fullname>
-        <path>/mnt/SDCARD/Roms/NEOGEO/</path>
-        <extension>.zip .ZIP</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>neogeo</platform>
-        <theme>neogeo</theme>
-    </system>
-
-    <system>
-        <name>NGP</name>
-        <fullname>NEOGEO Pocket</fullname>
-        <path>/mnt/SDCARD/Roms/NGP/</path>
-        <extension>.zip .ZIP .ngc .NGC .ngp .NGP</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>ngp</platform>
-        <theme>ngp</theme>
-    </system>
-
-    <system>
-        <name>PCE</name>
-        <fullname>TurboGrafx-16</fullname>
-        <path>/mnt/SDCARD/Roms/PCE/</path>
-        <extension>.zip .ZIP .pce .PCE .cue .CUE</extension>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>pcengine</platform>
-        <theme>pcengine</theme>
-    </system>
-
-    <system>
-        <name>PSP</name>
-        <fullname>PSP</fullname>
-        <path>/mnt/SDCARD/Roms/PSP/</path>
-        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>psp</platform>
-        <theme>psp</theme>
     </system>
 
     <system>
