ES systems through SUPERVISION

--- a/emulationstation/.emulationstation/es_systems.cfg
+++ b/emulationstation/.emulationstation/es_systems.cfg
@@ -413,7 +413,7 @@
 
     <system>
         <name>NEOGEO</name>
-        <fullname>NEOGEO</fullname>
+        <fullname>SNK NEOGEO</fullname>
         <path>/mnt/SDCARD/Roms/NEOGEO/</path>
         <extension>.zip .7z</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
@@ -423,7 +423,7 @@
 
     <system>
         <name>NGP</name>
-        <fullname>NEOGEO Pocket</fullname>
+        <fullname>SNK NEOGEO Pocket</fullname>
         <path>/mnt/SDCARD/Roms/NGP/</path>
         <extension>.ngp .ngc .zip .7z</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
@@ -433,7 +433,7 @@
 
     <system>
         <name>NGPC</name>
-        <fullname>NEOGEO Pocket Color</fullname>
+        <fullname>SNK NEOGEO Pocket Color</fullname>
         <path>/mnt/SDCARD/Roms/NGPC/</path>
         <extension>.ngp .ngc .zip .7z</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
@@ -463,7 +463,7 @@
 
     <system>
         <name>PCE</name>
-        <fullname>TurboGrafx-16</fullname>
+        <fullname>NEC TurboGrafx-16</fullname>
         <path>/mnt/SDCARD/Roms/PCE/</path>
         <extension>.pce .zip .7z .ccd .iso .img .chd .cue</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
@@ -473,7 +473,7 @@
 
     <system>
         <name>PCECD</name>
-        <fullname>TurboGrafx-CD</fullname>
+        <fullname>NEC TurboGrafx-CD</fullname>
         <path>/mnt/SDCARD/Roms/PCECD/</path>
         <extension>.iso .img .chd .pce .ccd .cue .zip .7z</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
@@ -531,14 +531,71 @@
         <theme>psp</theme>
     </system>
 
+    <system>
+        <name>QUAKE</name>
+        <fullname>Quake</fullname>
+        <path>/mnt/SDCARD/Roms/QUAKE/</path>
+        <extension>.fbl .pak</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>quake</platform>
+        <theme>quake</theme>
+    </system>
 
+    <system>
+        <name>SATELLAVIEW</name>
+        <fullname>Nintendo Satellaview</fullname>
+        <path>/mnt/SDCARD/Roms/SATELLAVIEW/</path>
+        <extension>.zip .7z .bs .sfc .smc .swc .fig .st</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>satellaview</platform>
+        <theme>satellaview</theme>
+    </system>
 
+    <system>
+        <name>SATURN</name>
+        <fullname>Sega Saturn</fullname>
+        <path>/mnt/SDCARD/Roms/SATURN/</path>
+        <extension>.chd .zip .mds .ccd .iso .cue</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>saturn</platform>
+        <theme>saturn</theme>
+    </system>
+
+    <system>
+        <name>SCUMMVM</name>
+        <fullname>ScummVM</fullname>
+        <path>/mnt/SDCARD/Roms/SCUMMVM/</path>
+        <extension>.scummvm</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>scummvm</platform>
+        <theme>scummvm</theme>
+    </system>
+
+    <system>
+        <name>SEGACD</name>
+        <fullname>Sega CD</fullname>
+        <path>/mnt/SDCARD/Roms/SEGACD/</path>
+        <extension>.chd .m3u .zip .7z .gen .smd .md .322x .cue .iso .sms .68k</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>segacd</platform>
+        <theme>segacd</theme>
+    </system>
+
+    <system>
+        <name>SEGASGONE</name>
+        <fullname>Sega SG-1000</fullname>
+        <path>/mnt/SDCARD/Roms/SEGASGONE/</path>
+        <extension>.zip .7z .sms .gg .sg .mv .bin .rom</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>sg1000</platform>
+        <theme>sg1000</theme>
+    </system>
 
     <system>
         <name>SEVENTYEIGHTHUNDRED</name>
         <fullname>Atari 7800</fullname>
         <path>/mnt/SDCARD/Roms/SEVENTYEIGHTHUNDRED/</path>
-        <extension>.zip .ZIP .a78 .A78 .bin .BIN</extension>
+        <extension>.zip .a78 .7z</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>atari7800</platform>
         <theme>atari7800</theme>
@@ -548,11 +605,55 @@
         <name>SFC</name>
         <fullname>Super Nintendo Entertainment System</fullname>
         <path>/mnt/SDCARD/Roms/SFC/</path>
-        <extension>.zip .ZIP .smc .sfc .swc .fig .bs .st</extension>
+        <extension>.zip .7z .smc .sfc .fig .gd3 .gd7 .dx2 .bsx .bs .swc .st</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>sfc</platform>
-        <theme>sfc</theme>
+        <platform>snes</platform>
+        <theme>snes</theme>
     </system>
+
+    <system>
+        <name>SGB</name>
+        <fullname>Nintendo Super Game Boy</fullname>
+        <path>/mnt/SDCARD/Roms/SGB/</path>
+        <extension>.gb .gbc .gba .zip .7z .bin</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>sgb</platform>
+        <theme>sgb</theme>
+    </system>
+
+    <system>
+        <name>SGFX</name>
+        <fullname>NEC SuperGrafx</fullname>
+        <path>/mnt/SDCARD/Roms/SGFX/</path>
+        <extension>.zip .7z .pce .sgx .cue .ccd .chd</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>supergrafx</platform>
+        <theme>supergrafx</theme>
+    </system>
+
+    <system>
+        <name>SUFAMI</name>
+        <fullname>Bandai SuFami Turbo</fullname>
+        <path>/mnt/SDCARD/Roms/SUFAMI/</path>
+        <extension>.smc .zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>sufami</platform>
+        <theme>sufami</theme>
+    </system>
+
+    <system>
+        <name>SUPERVISION</name>
+        <fullname>Watara SuperVision</fullname>
+        <path>/mnt/SDCARD/Roms/SUPERVISION</path>
+        <extension>.zip .7z .sv .bin</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>supervision</platform>
+        <theme>supervision</theme>
+    </system>
+
+
+
+
 
     <system>
         <name>WSC</name>
